go_live_with_eks/nodejs-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  labels:
    app: nodejs
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: nodejs
  #MODIFIED: Changed from LoadBalancer to ClusterIP
  type: ClusterIP 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app-deployment
  labels:
    app: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
        role: frontend # Label for NetworkPolicy
    spec:
      # Enforce non-root containers (SecurityContext)
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001 # Choose a non-root user ID
        fsGroup: 1001
      containers:
        - name: nodejs-app
          image: ritiklinux/node-frontend:v1.1
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          # Liveness and Readiness Probes (Crucial for stability)
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          # Runtime security with Seccomp
          securityContext:
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
